[package]
name = "hekmatki"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
futures-util = "0.3"
regex = "1"
once_cell = "1"
